<resources>
    <string name="app_name">Chat Application</string>
    <string name="sign_in">Signed In Successfully</string>

    <string name="not_sign_in">Sign In Failed</string>
    <string name="error_in_email">Enter a Correct Email Id</string>
    <string name="valid_username">Please enter a valid Username</string>
    <string name="valid_email">Please enter a valid email ID</string>
    <string name="valid_password">Password Length Should be in 8</string>
    <string name="conf_password">Password and confirm password should be same</string>
    <string name="sign_up_success">Account Created Successfully</string>
    <string name="account_failed">\"Account Creation Failed: \"</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="pdofile_pic_update">Profile Pic Updated Successfully</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="edit_username">Edit Username</string>
    <string name="editprofile">Edit Profile</string>
    <string name="change_pic">Change Profile Picture</string>
    <string name="remove_pic">Remove Profile Picture</string>
    <string name="profile_pic_removed">Profile Picture Removed Successfully</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="updt_pswd">Successfully Upadted Password</string>
    <string name="error">Someething went wrong</string>
    <string name="reset_pswd">Reset Password</string>
    <string name="reset_pswd_instruction">Reset Password Instruction has been sent to your registerd Email Id: %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="enter_your_email_id_here">Enter Your Email Id here</string>
    <string name="reset_email_id">Enter Registered Email Id</string>
    <string name="error_in_sent_email">Cannot sent the email, Something went wrong!! %1$s </string>
    <string name="retry_in">Retry in %1$s</string>
    <string name="plz_wait">Please wait....</string>
    <string name="profile_pic_cant_updated">\"Profile Pic Cannot Be Updated \"</string>
    <string name="check_internet">Check Your Internet Connection </string>
    <string name="no_internet">No Internet</string>
    <string name="chat">Chat</string>
    <string name="search_frnds">Search Friends</string>
    <string name="frnd_req">Friend Request</string>
    <string name="friends">Find Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_appear">Chats will appear here</string>
    <string name="no_frnd_req">No Requests are avillable</string>
    <string name="no_frnds">No Friends are added</string>
    <string name="pres_back_again">Press back again to exit</string>
    <string name="person">Person</string>
    <string name="send_frnd_req">Send Friend Request</string>
    <string name="cancel_frnd_req">Cancel Request</string>
    <string name="error_frnd">Error! %1$s</string>
    <string name="successfully_sent_request">Request Sent Successfully</string>
    <string name="unsuccessfully_sent_request">Request Sent Failed: %1$s</string>
    <string name="accept_frnd_req">Accept Friend Request</string>
    <string name="deni_frnd_req">Denied Friend Request</string>
    <string name="failed_to_fetch_accep_request">Failed To Fetch Accept Request: %1$s</string>
    <string name="failed_deni_req">Failed To deny request %1$s</string>
    <string name="failed_to_acceept_request">Failed to accept reequest %1$s</string>
    <string name="failed_to_fetch_chatlist">Failed to Fetch Chat List: %1$s</string>
    <string name="enter_msg">Enter Message</string>
    <string name="message_sent_failed">Message Sent Failed: %1$s</string>
    <string name="sent_message">Message Sent</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="uploadStatus">Uploading %1$s  (%2$s %%)</string>
    <string name="failed_to_upload">Failed To Upload: %1$s</string>
    <string name="failed_to_update_device_token">Failed to update device token: %1$s</string>
    <string name="notificayion_sent">Notification Sent</string>
    <string name="failed_to_sent_notification">Failed to sent Notification</string>
    <string name="frwrd">Forward</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="failed_to_delete">Failed To Delete: %1$s</string>
    <string name="downloadStatus">Downloding :%1$s (%2$s %%)</string>
    <string name="downloaded_succesfully">File Downloaded Sucessfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download:%1$s</string>
    <string name="share_with">Share with..</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="now">now</string>
</resources>