<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuFrwrd"
        android:title="@string/frwrd"
        android:icon="@drawable/ic_forward"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuDownload"
        android:title="@string/download"
        android:icon="@drawable/ic_download"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuDelete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menuShare"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"
        />

</menu>