<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"

    tools:context=".profile.ProfileActivity">

    <include

        layout="@layout/custom_progreessbar"
        android:visibility="gone"
        android:id="@+id/progressbarView"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editprofile"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:layout_marginTop="7dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/theme_color"

        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_image_default"
                android:id="@+id/edtProfileViewCircularImage"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="4dp"
                android:layout_marginTop="8dp"
                app:civ_border_color="@color/theme_color"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="9dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:layout_marginStart="9dp"
                android:textColorHint="@color/theme_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editUserName"
                    android:ems="18"
                    android:hint="@string/edit_username"/>

            </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtEmailTxt"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginStart="9dp"
                    android:textColorHint="@color/theme_color"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/write_color2"
                android:backgroundTint="@color/theme_color"
                android:id="@+id/saveBtn"
                android:text="@string/save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chngPasswrdTxtVw"
                android:text="@string/change_password"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

        </LinearLayout>



    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:backgroundTint="@color/theme_color"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="10dp"
        android:text="@string/logout"
        android:textColor="@color/write_color2" />


</LinearLayout>