<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:layout_weight="1"
            android:id="@+id/cameraLL"
            android:orientation="vertical">

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:src="@drawable/ic__998131_camera_photo_photography_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="2dp"
            android:id="@+id/galleryLL"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic__622830_gallery_landskape_mountains_nature_photo_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="2dp"
            android:id="@+id/videoLL"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic__03795_video_up_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="2dp"
            android:id="@+id/cancelLL"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic__36174_cloud_cancel_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>