<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:backgroundTint="@color/fancy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:id="@+id/friend_Dp"
        app:civ_border_width="4dp"
        android:layout_marginTop="12dp"
        app:civ_border_color="@color/theme_color"
        android:src="@drawable/profile_image_default"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frnd_Name_req"
            android:text="@string/person"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:id="@+id/sendFrndReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_frnd_req"
            android:layout_gravity="center"
            android:textColor="@color/white"
            />

        <Button
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_frnd_req"
            android:id="@+id/cancelFrndReq"
            android:visibility="gone"

            android:layout_gravity="center"
            android:textColor="@color/white"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_req"
            android:visibility="gone"
            />


    </LinearLayout>



</LinearLayout>