<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:id="@+id/received_friend_Dp_photo"
        app:civ_border_width="4dp"
        android:layout_marginTop="12dp"
        app:civ_border_color="@color/theme_color"
        android:src="@drawable/profile_image_default"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/received_frndName_req"
            android:text="@string/person"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:id="@+id/acceptFrndReqBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_frnd_req"
            android:layout_gravity="center"
            android:backgroundTint="@color/accept"
            android:visibility="visible"
            android:textColor="@color/write_color2"
            />

        <Button
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deni_frnd_req"
            android:id="@+id/denyFrndReqBtn"
            android:visibility="visible"
            android:layout_gravity="center"
            android:textColor="@color/write_color2"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reque_progress_req"
            android:visibility="gone"
            tools:visibility="visible"
            />


    </LinearLayout>
</LinearLayout>